reimplementation/smash3/crates/adl-syntax/tests/snapshots/snapshots__golden_disjoint_pt.snap
---
source: crates/adl-syntax/tests/snapshots.rs
expression: "snapshot_for(\"legacy_parser/tests/golden/disjoint_pt.adl\")"
---
File
  Object kw=object name=jets @1:1
    Take kw=take src=Jet @2:3
    Cut kw=select @3:3
      Cmp op=>
        Call name=pT
          Ident Jet
        Num 30
  Region kw=region name=SR_low @5:1
    Cut kw=select @6:3
      Cmp op=>
        Call name=pT
          Index 0
            Ident jets
        Num 100
    Cut kw=select @7:3
      Cmp op=<
        Call name=pT
          Index 0
            Ident jets
        Num 200
  Region kw=region name=SR_high @9:1
    Cut kw=select @10:3
      Cmp op=>
        Call name=pT
          Index 0
            Ident jets
        Num 300
---- diagnostics ----
