reimplementation/smash3/crates/adl-syntax/tests/snapshots/snapshots__golden_or_unencodable_branch.snap
---
source: crates/adl-syntax/tests/snapshots.rs
expression: "snapshot_for(\"legacy_parser/tests/golden/or_unencodable_branch.adl\")"
---
File
  Object kw=object name=jets @1:1
    Take kw=take src=Jet @2:3
    Cut kw=select @3:3
      Cmp op=>
        Call name=pT
          Ident Jet
        Num 30
  Object kw=object name=MET @5:1
    Take kw=take src=MissingET @6:3
  Region kw=region name=SR_orcut @8:1
    Cut kw=select @9:3
      Binary op=or
        Cmp op=>
          Dot field=pT
            Ident MET
          Num 500
        Cmp op=>
          Call name=aplanarity
            Ident jets
          Num 0.9
  Region kw=region name=SR_lowmet @11:1
    Cut kw=select @12:3
      Cmp op=<
        Dot field=pT
          Ident MET
        Num 100
---- diagnostics ----
