reimplementation/smash3/crates/adl-syntax/tests/snapshots/snapshots__golden_overlap_met.snap
---
source: crates/adl-syntax/tests/snapshots.rs
expression: "snapshot_for(\"legacy_parser/tests/golden/overlap_met.adl\")"
---
File
  Object kw=object name=MET @1:1
    Take kw=take src=MissingET @2:3
  Region kw=region name=SR1 @4:1
    Cut kw=select @5:3
      Cmp op=>
        Dot field=pT
          Ident MET
        Num 200
  Region kw=region name=SR2 @7:1
    Cut kw=select @8:3
      Cmp op=>
        Dot field=pT
          Ident MET
        Num 150
    Cut kw=select @9:3
      Cmp op=<
        Dot field=pT
          Ident MET
        Num 400
---- diagnostics ----
