reimplementation/smash3/crates/adl-syntax/tests/snapshots/snapshots__golden_ratio_met.snap
---
source: crates/adl-syntax/tests/snapshots.rs
expression: "snapshot_for(\"legacy_parser/tests/golden/ratio_met.adl\")"
---
File
  Object kw=object name=MET @1:1
    Take kw=take src=MissingET @2:3
  Region kw=region name=SR_ratio @4:1
    Cut kw=select @5:3
      Cmp op=<
        Binary op=/
          Binary op=+
            Dot field=pT
              Ident MET
            Num 100
          Dot field=pT
            Ident MET
        Num 1.5
  Region kw=region name=SR_lowmet @7:1
    Cut kw=select @8:3
      Cmp op=<
        Dot field=pT
          Ident MET
        Num 150
---- diagnostics ----
